# chapterize.rs

./: .gitignore  CHANGELOG.md  Cargo.toml  Makefile.toml  README.md  cliff.toml
.github/: _publish.yml
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: build.yml  docs.yml  draft.yml  format.yml  publish.yml  test.yml
src/: chapters.rs  cli.rs  error.rs  ffmpeg.rs  lib.rs  main.rs  prelude.rs  video.rs
tests/: chapters.rs  ffmpeg.rs  video.rs
